build.gradle: applicationDefaultJvmArgs: --add-exports=java.desktop/sun.awt=ALL-UNNAMED